Add Mockito configuration and enhance spending detectors
Introduced custom `MockitoConfiguration` for mock behaviors with better handling of `Optional`, `Sequence`, and `ResultPage` types. Enhanced `PatternDetector` and `AnomalyDetector` with new test cases and refined logic for detecting and updating spending patterns, improving reliability and coverage.